--- a/templates/index.html
+++ b/templates/index.html
@@ -9,5 +9,16 @@
 <body>
   <h1>hola mundo desde html!</h1>
   <h2>{{nombre}}</h2>
+  <h2>{{age}}</h2>
+  
+  {% if age > 18 %}
+    <p>es maayor de edad</p>
+  {% endif %}
+  
+  {% for item in list %}
+  
+  <p>{{item}}</p>
+  
+  {% endfor %}
 </body>
 </html>
