--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,7 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>index</title>
-</head>
-<body>
-  <h1>hola mundo desde html!</h1>
-  <h2>{{nombre}}</h2>
-  <h2>{{age}}</h2>
-  
-  {% if age > 18 %}
-    <p>es maayor de edad</p>
-  {% endif %}
-  
-  {% for item in list %}
-  
-  <p>{{item}}</p>
-  
-  {% endfor %}
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+  <p>esto es parte del index</p>
+  <p>{{nombre}}</p>
+{% endblock %}
+ 
